[gd_scene load_steps=56 format=3 uid="uid://c14qwn6rgfy23"]

[ext_resource type="Shader" uid="uid://ci8wfbw02mu88" path="res://scroll.gdshader" id="1_woxae"]
[ext_resource type="Texture2D" uid="uid://dnik485lu3qcr" path="res://photos/rock_texture.jpg" id="2_8melw"]
[ext_resource type="Script" uid="uid://dygskx16dxw61" path="res://Scripts/CharacterBody2d.gd" id="3_k078o"]
[ext_resource type="AudioStream" uid="uid://cmk7u1tgxt54b" path="res://sounds/fart.mp3" id="5_4ejj8"]
[ext_resource type="PackedScene" uid="uid://dwqgfnsocelag" path="res://Prefabs/drop_shadow.tscn" id="5_o3byv"]
[ext_resource type="Texture2D" uid="uid://ct4c457b7jv8i" path="res://Art Log 10-4/head.png" id="5_qfhdb"]
[ext_resource type="AudioStream" uid="uid://coxhwnuy5ucjv" path="res://sounds/jaw trimmed.mp3" id="6_bdknx"]
[ext_resource type="AudioStream" uid="uid://cgepr4tl2vbgd" path="res://sounds/nom.mp3" id="7_jtjp0"]
[ext_resource type="Texture2D" uid="uid://dri03ys3ug8it" path="res://Fat_Levels/NORMAL.png" id="8_78gq4"]
[ext_resource type="Texture2D" uid="uid://b7ywjiwjc5mue" path="res://Fat_Levels/OBESE.png" id="9_1cg6w"]
[ext_resource type="Script" uid="uid://bp4ryh50qjci3" path="res://Scripts/counter.gd" id="12_76tg3"]
[ext_resource type="Script" uid="uid://r8u5tp17cdm1" path="res://Scripts/Spawner.gd" id="13_g8d6c"]
[ext_resource type="Script" uid="uid://3skymg3qrpff" path="res://Scripts/ObstacleConfig.gd" id="14_56gb8"]
[ext_resource type="PackedScene" uid="uid://bw8o52geqt381" path="res://Prefabs/Obstacles/moving_bumper.tscn" id="15_6k8qj"]
[ext_resource type="PackedScene" uid="uid://dwuwlhgjhs3q2" path="res://Prefabs/Obstacles/bumper_line_straight.tscn" id="16_8vuys"]
[ext_resource type="PackedScene" uid="uid://od282gq0j8tm" path="res://Prefabs/Obstacles/vertical_missile.tscn" id="19_piesb"]
[ext_resource type="PackedScene" uid="uid://dqrpjumefrno2" path="res://Prefabs/Obstacles/homing_missile.tscn" id="20_8melw"]
[ext_resource type="PackedScene" uid="uid://ct5gv0hehauba" path="res://Prefabs/test_food.tscn" id="20_apyqh"]
[ext_resource type="PackedScene" uid="uid://h0lw1ng2k4w5" path="res://Prefabs/Obstacles/spinner.tscn" id="20_k078o"]
[ext_resource type="PackedScene" uid="uid://dqb04qeyjeghy" path="res://Prefabs/gate.tscn" id="21_e62ys"]
[ext_resource type="PackedScene" uid="uid://bqan5vfqgrejr" path="res://Prefabs/bumper.tscn" id="22_mv27k"]
[ext_resource type="PackedScene" uid="uid://unnyr3aarh3b" path="res://Prefabs/Obstacles/laser_gate.tscn" id="22_oh02o"]
[ext_resource type="Script" uid="uid://bdb3fxsghyjma" path="res://Scripts/wall.gd" id="23_ek8cs"]
[ext_resource type="PackedScene" uid="uid://drri3tywjovn4" path="res://Prefabs/move_up.tscn" id="24_8oyct"]
[ext_resource type="PackedScene" uid="uid://w8ophhq103o4" path="res://Prefabs/Obstacles/shooter.tscn" id="25_8melw"]
[ext_resource type="AudioStream" uid="uid://bblklcj710be5" path="res://sounds/flight-of-the-bumblebee.mp3" id="25_hlwbt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0hol4"]
size = Vector2(1152.5, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6r6c"]
size = Vector2(77, 1024.6481)

[sub_resource type="Gradient" id="Gradient_k47co"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.39308554, 0.39308554, 0.39308533, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xpiby"]
gradient = SubResource("Gradient_k47co")
width = 1920
height = 1080

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ed6rl"]
shader = ExtResource("1_woxae")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_epypp"]
radius = 15.289595
height = 70.0

[sub_resource type="Gradient" id="Gradient_o8x35"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_82has"]
gradient = SubResource("Gradient_o8x35")
width = 13

[sub_resource type="Gradient" id="Gradient_0e48y"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_epypp"]
gradient = SubResource("Gradient_0e48y")
width = 13

[sub_resource type="Gradient" id="Gradient_d21ai"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rj586"]
gradient = SubResource("Gradient_d21ai")
width = 5

[sub_resource type="Gradient" id="Gradient_kdubu"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d21ai"]
gradient = SubResource("Gradient_kdubu")
width = 5

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1cg6w"]
load_path = "res://.godot/imported/NORMAL.png-f54edbcb786264f0dc39aaa5b971619a.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_o3byv"]
load_path = "res://.godot/imported/SKINNY.png-745679658d5b9fbb89982359e8eb6e37.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_woxae"]
load_path = "res://.godot/imported/OVERWEIGHT.png-09b3ccbc466b79aec6343594e7437f68.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8melw"]
load_path = "res://.godot/imported/FAT.png-4fb3e8a293b724c210a22a6445bb5e8a.ctex"

[sub_resource type="Resource" id="Resource_xpiby"]
script = ExtResource("14_56gb8")
scene = ExtResource("15_6k8qj")
chance = 0.6
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_3aqej"]
script = ExtResource("14_56gb8")
scene = ExtResource("16_8vuys")
chance = 0.0
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_ns6we"]
script = ExtResource("14_56gb8")
scene = ExtResource("19_piesb")
chance = 0.3
negativeOffset = 2000.0
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_4ejj8"]
script = ExtResource("14_56gb8")
scene = ExtResource("20_k078o")
chance = 0.05
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_jtjp0"]
script = ExtResource("14_56gb8")
scene = ExtResource("22_oh02o")
chance = 0.05
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_woxae"]
script = ExtResource("14_56gb8")
scene = ExtResource("25_8melw")
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Resource" id="Resource_k078o"]
script = ExtResource("14_56gb8")
scene = ExtResource("20_8melw")
metadata/_custom_type_script = "uid://3skymg3qrpff"

[sub_resource type="Gradient" id="Gradient_3aqej"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.18359044, 0.18359044, 0.18359044, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rfjuf"]
gradient = SubResource("Gradient_3aqej")
width = 120
height = 1000

[sub_resource type="Gradient" id="Gradient_xpiby"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.3515629, 0.3515629, 0.35156286, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3aqej"]
gradient = SubResource("Gradient_xpiby")
width = 120
height = 1000

[node name="Main Game" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2(0.9887204, 1)

[node name="StaticBody2D" type="StaticBody2D" parent="Camera2D"]
position = Vector2(-95, -372)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(96, 38)
shape = SubResource("RectangleShape2D_0hol4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(95, 706)
shape = SubResource("RectangleShape2D_0hol4")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(710, 372)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Camera2D/StaticBody2D"]
position = Vector2(-520, 369)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="Sprite2D" type="Sprite2D" parent="Camera2D"]
z_index = -10
texture = SubResource("GradientTexture2D_xpiby")

[node name="BoxContainer" type="BoxContainer" parent="Camera2D"]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TextureRect" type="TextureRect" parent="Camera2D"]
z_index = -6
texture_repeat = 2
material = SubResource("ShaderMaterial_ed6rl")
offset_left = -530.0
offset_top = -351.99997
offset_right = 1182.0
offset_bottom = 1360.0
scale = Vector2(0.617831, 0.4136479)
texture = ExtResource("2_8melw")

[node name="ColorRect" type="ColorRect" parent="Camera2D"]
z_index = -5
offset_left = -595.0
offset_top = -296.0
offset_right = -555.0
offset_bottom = -256.0
scale = Vector2(28.796778, 16.390018)
color = Color(0.44291046, 0.44291088, 0.4429106, 0.94509804)

[node name="Player" type="Node2D" parent="."]

[node name="CharacterBody2D" type="CharacterBody2D" parent="Player" node_paths=PackedStringArray("weight_label", "charSprite", "headPivot", "foodBar") groups=["player"]]
motion_mode = 1
script = ExtResource("3_k078o")
current_preset = 0
weight_label = NodePath("../RichTextLabel")
charSprite = NodePath("Body")
headPivot = NodePath("Head Pivot")
foodBar = NodePath("../../Bars/Food Bar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CharacterBody2D"]
position = Vector2(16, 1)
rotation = 1.3421582
shape = SubResource("CapsuleShape2D_epypp")

[node name="Body" type="Sprite2D" parent="Player/CharacterBody2D"]
position = Vector2(1, -2)
scale = Vector2(0.13, 0.13)
texture = ExtResource("8_78gq4")

[node name="Drop Shadow" parent="Player/CharacterBody2D/Body" instance=ExtResource("5_o3byv")]
texture = ExtResource("8_78gq4")

[node name="state_increase_sound" type="AudioStreamPlayer" parent="Player/CharacterBody2D"]
stream = ExtResource("5_4ejj8")

[node name="state_decrease_sound" type="AudioStreamPlayer" parent="Player/CharacterBody2D"]
stream = ExtResource("5_4ejj8")
volume_db = 1.0
pitch_scale = 0.5

[node name="bounce_sound" type="AudioStreamPlayer" parent="Player/CharacterBody2D"]
stream = ExtResource("6_bdknx")
volume_db = -4.0

[node name="eat_sound" type="AudioStreamPlayer" parent="Player/CharacterBody2D"]
stream = ExtResource("7_jtjp0")
volume_db = -3.0

[node name="Head Pivot" type="Node2D" parent="Player/CharacterBody2D"]
position = Vector2(44, -6)

[node name="Head" type="Sprite2D" parent="Player/CharacterBody2D/Head Pivot"]
position = Vector2(17.999998, -2.0000029)
scale = Vector2(0.12, 0.12)
texture = ExtResource("5_qfhdb")

[node name="Drop Shadow" parent="Player/CharacterBody2D/Head Pivot/Head" instance=ExtResource("5_o3byv")]

[node name="RichTextLabel" type="RichTextLabel" parent="Player"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -40.0
offset_right = 153.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 50
text = "Fat"

[node name="Bars" type="Node2D" parent="."]
z_index = 3
position = Vector2(-123, -204)
scale = Vector2(14.275, 14.275)

[node name="Food Bar" type="TextureProgressBar" parent="Bars"]
offset_left = -25.008757
offset_top = -8.361189
offset_right = 14.991243
offset_bottom = 31.63885
scale = Vector2(5.164, 1.4428)
value = 100.0
texture_under = SubResource("GradientTexture1D_82has")
texture_progress = SubResource("GradientTexture1D_epypp")

[node name="Distance Bar" type="TextureProgressBar" parent="Bars"]
offset_left = 46.44484
offset_top = 24.938705
offset_right = 86.44484
offset_bottom = 64.938736
rotation = -1.5707964
scale = Vector2(5.164, 1.4428)
value = 100.0
texture_under = SubResource("GradientTexture1D_rj586")
texture_progress = SubResource("GradientTexture1D_d21ai")

[node name="Icons" type="Node2D" parent="Bars"]
position = Vector2(1.9614712, -0.024935694)

[node name="Normal" type="Node2D" parent="Bars/Icons"]
position = Vector2(0.42031574, 0.2101574)

[node name="RichTextLabel" type="RichTextLabel" parent="Bars/Icons/Normal"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.647987
offset_top = -6.8651485
offset_right = 189.35202
offset_bottom = 93.13485
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03136125, 0.024534937)
theme_override_font_sizes/normal_font_size = 50
text = "^"
autowrap_mode = 0

[node name="Sprite" type="Sprite2D" parent="Bars/Icons/Normal"]
position = Vector2(-10.437829, -4.2031517)
scale = Vector2(0.005, 0.005)
texture = SubResource("CompressedTexture2D_1cg6w")

[node name="Head" type="Sprite2D" parent="Bars/Icons/Normal"]
position = Vector2(-7.9159374, -4.458427)
scale = Vector2(0.005, 0.005)
texture = ExtResource("5_qfhdb")

[node name="Skinny" type="Node2D" parent="Bars/Icons"]
position = Vector2(-16.322243, 0.2101574)

[node name="RichTextLabel" type="RichTextLabel" parent="Bars/Icons/Skinny"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.647987
offset_top = -6.8651485
offset_right = 189.35202
offset_bottom = 93.13485
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03136125, 0.024534937)
theme_override_font_sizes/normal_font_size = 50
text = "^"
autowrap_mode = 0

[node name="Sprite" type="Sprite2D" parent="Bars/Icons/Skinny"]
position = Vector2(-10.437829, -4.2031517)
scale = Vector2(0.005, 0.005)
texture = SubResource("CompressedTexture2D_o3byv")

[node name="Head" type="Sprite2D" parent="Bars/Icons/Skinny"]
position = Vector2(-7.9159374, -4.458427)
scale = Vector2(0.005, 0.005)
texture = ExtResource("5_qfhdb")

[node name="Overweight" type="Node2D" parent="Bars/Icons"]
position = Vector2(17.162872, 0.2101574)

[node name="RichTextLabel" type="RichTextLabel" parent="Bars/Icons/Overweight"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.647987
offset_top = -6.8651485
offset_right = 189.35202
offset_bottom = 93.13485
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03136125, 0.024534937)
theme_override_font_sizes/normal_font_size = 50
text = "^"
autowrap_mode = 0

[node name="Sprite" type="Sprite2D" parent="Bars/Icons/Overweight"]
position = Vector2(-10.437829, -4.2031517)
scale = Vector2(0.005, 0.005)
texture = SubResource("CompressedTexture2D_woxae")

[node name="Head" type="Sprite2D" parent="Bars/Icons/Overweight"]
position = Vector2(-7.9159374, -4.458427)
scale = Vector2(0.005, 0.005)
texture = ExtResource("5_qfhdb")

[node name="Fat" type="Node2D" parent="Bars/Icons"]
position = Vector2(33.90543, 0.2101574)

[node name="RichTextLabel" type="RichTextLabel" parent="Bars/Icons/Fat"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.647987
offset_top = -6.8651485
offset_right = 189.35202
offset_bottom = 93.13485
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03136125, 0.024534937)
theme_override_font_sizes/normal_font_size = 50
text = "^"
autowrap_mode = 0

[node name="Sprite" type="Sprite2D" parent="Bars/Icons/Fat"]
position = Vector2(-10.437829, -4.2031517)
scale = Vector2(0.005, 0.005)
texture = SubResource("CompressedTexture2D_8melw")

[node name="Head" type="Sprite2D" parent="Bars/Icons/Fat"]
position = Vector2(-7.9159374, -4.458427)
scale = Vector2(0.005, 0.005)
texture = ExtResource("5_qfhdb")

[node name="Obese" type="Node2D" parent="Bars/Icons"]
position = Vector2(50.718037, 0.2101574)

[node name="RichTextLabel" type="RichTextLabel" parent="Bars/Icons/Obese"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.647987
offset_top = -6.8651485
offset_right = 189.35202
offset_bottom = 93.13485
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.03136125, 0.024534937)
theme_override_font_sizes/normal_font_size = 50
text = "^"
autowrap_mode = 0

[node name="Sprite" type="Sprite2D" parent="Bars/Icons/Obese"]
position = Vector2(-11.329926, -4.2544255)
scale = Vector2(0.005, 0.005)
texture = ExtResource("9_1cg6w")

[node name="Head" type="Sprite2D" parent="Bars/Icons/Obese"]
position = Vector2(-9.0181875, -4.509701)
scale = Vector2(0.005, 0.005)
texture = ExtResource("5_qfhdb")

[node name="Node2D" type="Node2D" parent="Bars"]
position = Vector2(-0.21015763, 0.28021017)
scale = Vector2(1.0109687, 1)

[node name="ColorRect" type="ColorRect" parent="Bars/Node2D"]
z_index = 1
offset_left = 24.588444
offset_top = -8.82662
offset_right = 64.58844
offset_bottom = 31.17338
scale = Vector2(0.010484151, 0.057173327)
color = Color(1, 1, 0, 1)

[node name="Control" type="Control" parent="Bars"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.0039147, 0.89860666)

[node name="Counter" type="RichTextLabel" parent="Bars/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 15.796818
offset_top = -21.948921
offset_right = 215.79681
offset_bottom = 140.0213
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.04645124, 0.05168212)
theme_override_font_sizes/normal_font_size = 50
text = "Level:
1"
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
script = ExtResource("12_76tg3")

[node name="Foods" type="Node" parent="."]

[node name="Spawner" type="Node2D" parent="." node_paths=PackedStringArray("cam", "distanceBar", "counter_reference")]
position = Vector2(0, 400)
script = ExtResource("13_g8d6c")
obstacle_configs = Array[ExtResource("14_56gb8")]([SubResource("Resource_xpiby"), SubResource("Resource_3aqej"), SubResource("Resource_ns6we"), SubResource("Resource_4ejj8"), SubResource("Resource_jtjp0"), SubResource("Resource_woxae"), SubResource("Resource_k078o")])
food = ExtResource("20_apyqh")
gate = ExtResource("21_e62ys")
cam = NodePath("../Camera2D")
distanceBar = NodePath("../Bars/Distance Bar")
counter_reference = NodePath("../Bars/Control/Counter")

[node name="Bumper" parent="." instance=ExtResource("22_mv27k")]
process_mode = 4
visible = false
position = Vector2(-295, 88)

[node name="Left_Wall" type="Area2D" parent="."]
z_index = 2
position = Vector2(-95, -372)
script = ExtResource("23_ek8cs")
direction = Vector2(1, 0)

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Left_Wall"]
position = Vector2(-520, 369)
scale = Vector2(2.438667, -1.1067214)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="Sprite2D" type="Sprite2D" parent="Left_Wall"]
position = Vector2(-484, 252)
texture = SubResource("GradientTexture2D_rfjuf")

[node name="Right_Wall" type="Area2D" parent="."]
z_index = 2
script = ExtResource("23_ek8cs")
direction = Vector2(-1, 0)

[node name="Sprite2D2" type="Sprite2D" parent="Right_Wall"]
position = Vector2(580, -76)
texture = SubResource("GradientTexture2D_rfjuf")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Right_Wall"]
position = Vector2(615, 0)
scale = Vector2(2.438667, -1.1067214)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="Ceiling" type="Area2D" parent="."]
z_index = 1
position = Vector2(-20, 290)
rotation = -1.5707964
script = ExtResource("23_ek8cs")
direction = Vector2(0, 1)

[node name="Sprite2D2" type="Sprite2D" parent="Ceiling"]
position = Vector2(580, -76)
scale = Vector2(1, 1.3600005)
texture = SubResource("GradientTexture2D_3aqej")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(615, 12.999981)
scale = Vector2(2.438667, -1.1067214)
shape = SubResource("RectangleShape2D_q6r6c")

[node name="BumperLines1" type="Node2D" parent="."]
process_mode = 4
visible = false

[node name="Bumper" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-280, -217)

[node name="Bumper2" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-352, -175.99998)

[node name="Bumper3" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-136, -304)

[node name="Bumper4" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-208, -263)

[node name="Bumper5" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-38, 25)

[node name="Bumper6" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(-110, 66.000015)

[node name="Bumper7" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(106, -62)

[node name="Bumper8" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(34, -20.999985)

[node name="Bumper13" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(228, 213)

[node name="Bumper14" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(156, 254.00002)

[node name="Bumper15" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(372, 126)

[node name="Bumper16" parent="BumperLines1" instance=ExtResource("22_mv27k")]
position = Vector2(300, 167.00002)

[node name="Node2D" type="Node2D" parent="."]
process_mode = 4
visible = false
position = Vector2(76, 577)

[node name="Bumper line" type="Node2D" parent="Node2D"]
position = Vector2(-224, -115)
rotation = 0.7853982

[node name="Bumper" parent="Node2D/Bumper line" instance=ExtResource("22_mv27k")]

[node name="Bumper2" parent="Node2D/Bumper line" instance=ExtResource("22_mv27k")]
position = Vector2(85, 0)

[node name="Bumper3" parent="Node2D/Bumper line" instance=ExtResource("22_mv27k")]
position = Vector2(-85, 0)

[node name="Bumper line2" type="Node2D" parent="Node2D"]
position = Vector2(87.99997, -115)
rotation = 0.7853982

[node name="Bumper" parent="Node2D/Bumper line2" instance=ExtResource("22_mv27k")]

[node name="Bumper2" parent="Node2D/Bumper line2" instance=ExtResource("22_mv27k")]
position = Vector2(85, 0)

[node name="Bumper3" parent="Node2D/Bumper line2" instance=ExtResource("22_mv27k")]
position = Vector2(-85, 0)

[node name="Bumper line3" type="Node2D" parent="Node2D"]
position = Vector2(-220, 90)
rotation = -0.7853982

[node name="Bumper" parent="Node2D/Bumper line3" instance=ExtResource("22_mv27k")]

[node name="Bumper2" parent="Node2D/Bumper line3" instance=ExtResource("22_mv27k")]
position = Vector2(85, 0)

[node name="Bumper3" parent="Node2D/Bumper line3" instance=ExtResource("22_mv27k")]
position = Vector2(-85, 0)

[node name="Bumper line4" type="Node2D" parent="Node2D"]
position = Vector2(91.99997, 90)
rotation = -0.7853982

[node name="Bumper" parent="Node2D/Bumper line4" instance=ExtResource("22_mv27k")]

[node name="Bumper2" parent="Node2D/Bumper line4" instance=ExtResource("22_mv27k")]
position = Vector2(85, 0)

[node name="Bumper3" parent="Node2D/Bumper line4" instance=ExtResource("22_mv27k")]
position = Vector2(-85, 0)

[node name="move_up" parent="Node2D" instance=ExtResource("24_8oyct")]
Def_Speed = 120.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_hlwbt")
volume_db = -6.0
parameters/looping = true
